--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Raleway, sans-serif;
   line-height: 1.5;
-  font-weight: 400;
+  font-weight: 900;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: #D8DAD3;
   background-color: #242424;
 
   font-synthesis: none;
@@ -15,12 +15,17 @@
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
+  font-weight: 900;
+  color: #A4C2A5;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #566246;
+}
+
+h3 {
+  font-family: Raleway, sans-serif, italics;
+  font-weight: 100;
 }
 
 body {
