--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
 #root {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding: 2rem;
   text-align: center;
   width: 100%
