clean up and projects
Lots of clean up and projects and work added.

--- a/src/index.css
+++ b/src/index.css
@@ -16,11 +16,8 @@
 
 a {
   font-weight: 900;
-  color: #A4C2A5;
+  color: #39A989;
   text-decoration: inherit;
-}
-a:hover {
-  color: #566246;
 }
 
 h3 {
